<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="#BFDBFE"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50sp"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/login"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="6sp">
        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:paddingRight="10sp"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:text="@string/usn"/>
        <EditText
            android:id="@+id/usn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:hint="@string/inputUsn"
            android:textColor="#8F000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="6sp">
        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:paddingRight="10sp"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:text="@string/pass"/>
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:inputType="textPassword"
            android:hint="@string/inputPass"
            android:textColor="#8F000000"/>
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn"
        android:layout_marginTop="18sp"
        android:padding="10sp"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:backgroundTint="@color/black"/>

</LinearLayout>